--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,13 +15,13 @@
   <body>
     <header class="head-list">
       <nav>
-        <a href="./index.html" class="logo"
+        <a href="index.html" class="logo"
           >Web<span class="accent-head">Studio</span>
         </a>
 
         <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="#" class="link current">Портфоліо</a></li>
+          <li><a href="index.html" class="link">Студія</a></li>
+          <li><a href="portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
