--- a/index.html
+++ b/index.html
@@ -14,146 +14,20 @@
   </head>
   <body>
     <header class="head-list">
-      <nav>
-        <a href="index.html" class="logo">
-          Web<span class="accent-head">Studio</span>
-        </a>
+      <div class="container">
+        <nav>
+          <a href="index.html" class="logo">
+            Web<span class="accent-head">Studio</span>
+          </a>
 
-        <ul class="site-nav">
-          <li><a href="index.html" class="link current">Студія</a></li>
-          <li><a href="portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
+          <ul class="site-nav">
+            <li><a href="index.html" class="link current">Студія</a></li>
+            <li><a href="portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
 
-      <ul class="contact">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-
-    <main>
-      <!--Шапка-->
-
-      <section class="action">
-        <h1 class="action-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
-      </section>
-
-      <!--Особливості-->
-
-      <section class="feature">
-        <h2 class="visually-hidden">Наші особливості</h2>
-        <ul>
-          <li>
-            <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-            <p class="text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <!--Чим ми займаємося-->
-
-      <section class="work">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/1.jpg"
-              alt="Людина працює за комп'ютером"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/2.jpg"
-              alt="Людтна працює за ноутбуком"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/3.jpg"
-              alt="Людина працює за планшетом"
-              width="370"
-            />
-          </li>
-        </ul>
-      </section>
-
-      <!--Наша команда-->
-
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
-          <li>
-            <img src="./images/p1.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3 class="title">Ігор Дем'яненко</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/p2.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3 class="title">Ольга Рєпіна</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/p3.jpg" alt="Микола Тарасов" width="270" />
-            <h3 class="title">Микола Тарасов</h3>
-            <p class="text">Marketing</p>
-          </li>
-
-          <li></li>
-          <li>
-            <img src="./images/p4.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3 class="title">Михайло Єрмаков</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <footer class="page-foot">
-      <a href="./index.html" class="logo-foot">
-        <p>Web<span class="accent-foot">Studio</span></p>
-      </a>
-      <address>
-        <ul class="contact-foot">
-          <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="map"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
+        <ul class="contact">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -163,7 +37,147 @@
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <!--Шапка-->
+
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="button">Замовити послугу</button>
+        </div>
+      </section>
+
+      <!--Особливості-->
+
+      <section class="feature">
+        <div class="container">
+          <h2 class="visually-hidden">Наші особливості</h2>
+          <ul>
+            <li>
+              <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">ПЛАНУВАННЯ</h3>
+              <p class="text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--Чим ми займаємося-->
+
+      <section class="work">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/1.jpg"
+                alt="Людина працює за комп'ютером"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/2.jpg"
+                alt="Людтна працює за ноутбуком"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/3.jpg"
+                alt="Людина працює за планшетом"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--Наша команда-->
+
+      <section class="team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list">
+            <li>
+              <img src="./images/p1.jpg" alt="Ігор Дем'яненко" width="270" />
+              <h3 class="title">Ігор Дем'яненко</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/p2.jpg" alt="Ольга Рєпіна" width="270" />
+              <h3 class="title">Ольга Рєпіна</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/p3.jpg" alt="Микола Тарасов" width="270" />
+              <h3 class="title">Микола Тарасов</h3>
+              <p class="text">Marketing</p>
+            </li>
+
+            <li></li>
+            <li>
+              <img src="./images/p4.jpg" alt="Михайло Єрмаков" width="270" />
+              <h3 class="title">Михайло Єрмаков</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-foot">
+      <div class="container">
+        <a href="./index.html" class="logo-foot">
+          <p>Web<span class="accent-foot">Studio</span></p>
+        </a>
+        <address>
+          <ul class="contact-foot">
+            <li>
+              <a
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="map"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
