--- a/portfolio.html
+++ b/portfolio.html
@@ -14,108 +14,20 @@
   </head>
   <body>
     <header class="head-list">
-      <nav>
-        <a href="index.html" class="logo"
-          >Web<span class="accent-head">Studio</span>
-        </a>
+      <div class="container">
+        <nav>
+          <a href="index.html" class="logo"
+            >Web<span class="accent-head">Studio</span>
+          </a>
 
-        <ul class="site-nav">
-          <li><a href="index.html" class="link">Студія</a></li>
-          <li><a href="portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
+          <ul class="site-nav">
+            <li><a href="index.html" class="link">Студія</a></li>
+            <li><a href="portfolio.html" class="link current">Портфоліо</a></li>
+            <li><a href="#" class="link">Контакти</a></li>
+          </ul>
+        </nav>
 
-      <ul class="contact">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-
-    <main>
-      <section>
-        <h1 class="visually-hidden">portfolio</h1>
-        <ul class="filters">
-          <li><button type="button" class="button-filters">Усі</button></li>
-          <li>
-            <button type="button" class="button-filters">Веб-сайти</button>
-          </li>
-          <li><button type="button" class="button-filters">Додатки</button></li>
-          <li><button type="button" class="button-filters">Дизайн</button></li>
-          <li>
-            <button type="button" class="button-filters">Маркетинг</button>
-          </li>
-        </ul>
-
-        <ul>
-          <li class="card">
-            <img src="./images/po1.jpg" alt="Ноутбук" width="370" />
-            <h2 class="card-title">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/po2.jpg" alt="Баскетболісти" width="370" />
-            <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
-            <p class="text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/po3.jpg" alt="Ємблема ресторану" width="370" />
-            <h2 class="card-title">Ресторан Seafood</h2>
-            <p class="text">Додаток</p>
-          </li>
-          <li>
-            <img src="./images/po4.jpg" alt="Навушники" width="370" />
-            <h2 class="card-title">Проєкт Prime</h2>
-            <p class="text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/po5.jpg" alt="Коробки" width="370" />
-            <h2 class="card-title">Проєкт Boxes</h2>
-            <p>class="text"Додаток</p>
-          </li>
-          <li>
-            <img src="./images/po6.jpg" alt="Монітор" width="370" />
-            <h2 class="card-title">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/po7.jpg" alt="Книга" width="370" />
-            <h2 class="card-title">Видання Limited Edition</h2>
-            <p class="text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/po8.jpg" alt="Значок" width="370" />
-            <h2 class="card-title">Проєкт LAB</h2>
-            <p class="text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/po9.jpg" alt="Ноутбук" width="370" />
-            <h2 class="card-title">Growing Business</h2>
-            <p class="text">Додаток</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-
-    <footer class="page-foot">
-      <a href="./index.html" class="logo-foot">
-        <p>Web<span class="accent-foot">Studio</span></p>
-      </a>
-      <address>
-        <ul class="contact-foot">
-          <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="map"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
+        <ul class="contact">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -125,7 +37,107 @@
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+
+    <main>
+      <section>
+        <div class="container">
+          <h1 class="visually-hidden">portfolio</h1>
+          <ul class="filters">
+            <li><button type="button" class="button-filters">Усі</button></li>
+            <li>
+              <button type="button" class="button-filters">Веб-сайти</button>
+            </li>
+            <li>
+              <button type="button" class="button-filters">Додатки</button>
+            </li>
+            <li>
+              <button type="button" class="button-filters">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="button-filters">Маркетинг</button>
+            </li>
+          </ul>
+
+          <ul>
+            <li class="card">
+              <img src="./images/po1.jpg" alt="Ноутбук" width="370" />
+              <h2 class="card-title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
+            </li>
+            <li>
+              <img src="./images/po2.jpg" alt="Баскетболісти" width="370" />
+              <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Дизайн</p>
+            </li>
+            <li>
+              <img src="./images/po3.jpg" alt="Ємблема ресторану" width="370" />
+              <h2 class="card-title">Ресторан Seafood</h2>
+              <p class="text">Додаток</p>
+            </li>
+            <li>
+              <img src="./images/po4.jpg" alt="Навушники" width="370" />
+              <h2 class="card-title">Проєкт Prime</h2>
+              <p class="text">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/po5.jpg" alt="Коробки" width="370" />
+              <h2 class="card-title">Проєкт Boxes</h2>
+              <p>class="text"Додаток</p>
+            </li>
+            <li>
+              <img src="./images/po6.jpg" alt="Монітор" width="370" />
+              <h2 class="card-title">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p>
+            </li>
+            <li>
+              <img src="./images/po7.jpg" alt="Книга" width="370" />
+              <h2 class="card-title">Видання Limited Edition</h2>
+              <p class="text">Дизайн</p>
+            </li>
+            <li>
+              <img src="./images/po8.jpg" alt="Значок" width="370" />
+              <h2 class="card-title">Проєкт LAB</h2>
+              <p class="text">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/po9.jpg" alt="Ноутбук" width="370" />
+              <h2 class="card-title">Growing Business</h2>
+              <p class="text">Додаток</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page-foot">
+      <div class="container">
+        <a href="./index.html" class="logo-foot">
+          <p>Web<span class="accent-foot">Studio</span></p></a
+        >
+        <address>
+          <ul class="contact-foot">
+            <li>
+              <a
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="map"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
