--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
             </li>
           </ul>
 
-          <ul>
-            <li class="card">
+          <ul class="card">
+            <li>
               <img src="./images/po1.jpg" alt="Ноутбук" width="370" />
               <h2 class="card-title">Технокряк</h2>
               <p class="text">Веб-сайт</p>
