--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="head-list">
-      <nav>
+    <header>
+      <nav class="head-list">
         <div class="container main-nav">
           <a href="index.html" class="logo">
             Web<span class="accent-head">Studio</span>
@@ -59,28 +59,28 @@
       <section class="feature">
         <div class="container">
           <h2 class="visually-hidden">Наші особливості</h2>
-          <ul>
-            <li>
+          <ul class="feature-list">
+            <li class="item">
               <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="feature-title">ПЛАНУВАННЯ</h3>
               <p class="text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -96,22 +96,22 @@
       <section class="work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul>
-            <li>
+          <ul class="work-list">
+            <li class="item">
               <img
                 src="./images/1.jpg"
                 alt="Людина працює за комп'ютером"
                 width="370"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/2.jpg"
                 alt="Людтна працює за ноутбуком"
                 width="370"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/3.jpg"
                 alt="Людина працює за планшетом"
@@ -128,24 +128,22 @@
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list">
-            <li>
+            <li class="item">
               <img src="./images/p1.jpg" alt="Ігор Дем'яненко" width="270" />
               <h3 class="title">Ігор Дем'яненко</h3>
               <p class="text">Product Designer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/p2.jpg" alt="Ольга Рєпіна" width="270" />
               <h3 class="title">Ольга Рєпіна</h3>
               <p class="text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/p3.jpg" alt="Микола Тарасов" width="270" />
               <h3 class="title">Микола Тарасов</h3>
               <p class="text">Marketing</p>
             </li>
-
-            <li></li>
-            <li>
+            <li class="item">
               <img src="./images/p4.jpg" alt="Михайло Єрмаков" width="270" />
               <h3 class="title">Михайло Єрмаков</h3>
               <p class="text">UI Designer</p>
