--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="head-list">
-        <div class="container main-nav">
+    <header class="head-list">
+      <div class="container main-nav">
+        <nav class="head-nav">
           <a href="index.html" class="logo">
             Web<span class="accent-head">Studio</span>
           </a>
@@ -29,19 +29,18 @@
             </li>
             <li class="item"><a href="#" class="link">Контакти</a></li>
           </ul>
-
-          <ul class="contact">
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        </nav>
+        <ul class="contact">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
@@ -69,48 +68,66 @@
           <ul class="card">
             <li class="item">
               <img src="./images/po1.jpg" alt="Ноутбук" width="370" />
-              <h2 class="card-title">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
+              <div class="card-text">
+                <h2 class="card-title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po2.jpg" alt="Баскетболісти" width="370" />
-              <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
-              <p class="text">Дизайн</p>
+              <div class="card-text">
+                <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+                <p class="text">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po3.jpg" alt="Ємблема ресторану" width="370" />
-              <h2 class="card-title">Ресторан Seafood</h2>
-              <p class="text">Додаток</p>
+              <div class="card-text">
+                <h2 class="card-title">Ресторан Seafood</h2>
+                <p class="text">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po4.jpg" alt="Навушники" width="370" />
-              <h2 class="card-title">Проєкт Prime</h2>
-              <p class="text">Маркетинг</p>
+              <div class="card-text">
+                <h2 class="card-title">Проєкт Prime</h2>
+                <p class="text">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po5.jpg" alt="Коробки" width="370" />
-              <h2 class="card-title">Проєкт Boxes</h2>
-              <p class="text">Додаток</p>
+              <div class="card-text">
+                <h2 class="card-title">Проєкт Boxes</h2>
+                <p class="text">Додаток</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po6.jpg" alt="Монітор" width="370" />
-              <h2 class="card-title">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
+              <div class="card-text">
+                <h2 class="card-title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po7.jpg" alt="Книга" width="370" />
-              <h2 class="card-title">Видання Limited Edition</h2>
-              <p class="text">Дизайн</p>
+              <div class="card-text">
+                <h2 class="card-title">Видання Limited Edition</h2>
+                <p class="text">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po8.jpg" alt="Значок" width="370" />
-              <h2 class="card-title">Проєкт LAB</h2>
-              <p class="text">Маркетинг</p>
+              <div class="card-text">
+                <h2 class="card-title">Проєкт LAB</h2>
+                <p class="text">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/po9.jpg" alt="Ноутбук" width="370" />
-              <h2 class="card-title">Growing Business</h2>
-              <p class="text">Додаток</p>
+              <div class="card-text">
+                <h2 class="card-title">Growing Business</h2>
+                <p class="text">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -120,11 +137,11 @@
     <footer class="page-foot">
       <div class="container">
         <a href="./index.html" class="logo-foot">
-          <p>Web<span class="accent-foot">Studio</span></p></a
-        >
+          <p>Web<span class="accent-foot">Studio</span></p>
+        </a>
         <address>
           <ul class="contact-foot">
-            <li>
+            <li class="item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank"
@@ -133,12 +150,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
           </ul>
